# llama.cpp

./: CMakeLists.txt  README.md
.devops/: rocm.Dockerfile
amd-docs/: conf.py  index.rst  what-is-llama-cpp.rst
amd-docs/about/: license.rst
amd-docs/examples/: llama-cpp-examples.rst
amd-docs/install/: llama-cpp-install.rst
amd-docs/sphinx/: _toc.yml.in
ggml/: CMakeLists.txt
ggml/include/: ggml-hrx.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-cuda/: common.cuh  ggml-cuda.cu  mma.cuh  mmq.cu
ggml/src/ggml-hip/: CMakeLists.txt
ggml/src/ggml-hrx/: CMakeLists.txt  ggml-hrx.cpp
ggml/src/ggml-hrx/kernels/: add8_f32.hip.cpp  add_add_f32_broadcast.hip.cpp  add_f32.hip.cpp  add_f32_broadcast.hip.cpp  add_rms_norm_mul_f32_broadcast.hip.cpp  add_softplus_mul_f32_broadcast.hip.cpp  argsort_f32.hip.cpp  clamp_f32.hip.cpp  concat_f32.hip.cpp  copy_f32_f16.hip.cpp  copy_strided_f32.hip.cpp  div_f32_broadcast.hip.cpp  flash_attn_ext_f32_bf16_decode.hip.cpp  flash_attn_ext_f32_f16_decode.hip.cpp  flash_attn_ext_f32_f16_prefill_direct.hip.cpp  flash_attn_ext_f32_f16_prefill_direct_generic.inc  flash_attn_ext_f32_f16_prefill_direct_gfx11.inc  flash_attn_ext_f32_f16_prefill_tile8.hip.cpp  flash_attn_ext_f32_f16_prefill_wmma16.hip.cpp  flash_attn_ext_f32_f32_decode.hip.cpp  flash_attn_ext_f32_q4_0_decode.hip.cpp  flash_attn_ext_f32_q8_0_decode.hip.cpp  flash_attn_ext_f32_q8_0_q4_0_decode.hip.cpp  gated_delta_net_f32.hip.cpp  generate_hrx_kernels.py  get_rows_f32.hip.cpp  get_rows_q5_k.hip.cpp  hrx_kernel_catalog.h  mul_add_add_f32_broadcast.hip.cpp  mul_f32.hip.cpp  mul_f32_broadcast.hip.cpp  mul_mat_id_q4_k.hip.cpp  mul_mat_id_q4_k_mul.hip.cpp  mul_mat_id_q4_k_mul_q8_1.hip.cpp  mul_mat_id_q4_k_q8_1.hip.cpp  mul_mat_id_q4_k_q8_1_x4_mmq.hip.cpp  mul_mat_id_q4_k_swiglu.hip.cpp  mul_mat_vec_bf16.hip.cpp  mul_mat_vec_bf16_set_rows.hip.cpp  mul_mat_vec_bf16_swiglu.hip.cpp  (+37 more)
tests/: CMakeLists.txt  test-backend-hrx.cpp  test-backend-ops.cpp
tools/llama-bench/: llama-bench.cpp
